sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: value ecart
  ecart = getNombreValeurs()-4
  ^AlgCombSort:8: error: not found: value ecart
    if (ecart > 1)
        ^AlgCombSort:11: error: not found: value ecart
      ecart = (ecart.toDouble/1.3).toInt
      ^AlgCombSort:12: error: not found: value i
      i = 0
      ^AlgCombSort:13: error: not found: value i
      while (i+ecart<getNombreValeurs())
             ^AlgCombSort:13: error: not found: value ecart
      while (i+ecart<getNombreValeurs())
               ^AlgCombSort:15: error: not found: value i
        if (!plusPetit(i,i+ecart))
                       ^AlgCombSort:15: error: not found: value i
        if (!plusPetit(i,i+ecart))
                         ^AlgCombSort:15: error: not found: value ecart
        if (!plusPetit(i,i+ecart))
                           ^AlgCombSort:17: error: not found: value i
          echange(i,i+ecart)
                  ^AlgCombSort:17: error: not found: value i
          echange(i,i+ecart)
                    ^AlgCombSort:17: error: not found: value ecart
          echange(i,i+ecart)
                      ^AlgCombSort:18: error: not found: value i
          i+=1
          ^AlgCombSort:24: error: not found: value ecart
  } while (ecart>1 || tri == false)
           ^