sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  ecart = getNombreValeurs()-4
  var tri = true
  do
  {
    tri = true
    if (ecart > 1)
    {
      
      ecart = (ecart.toDouble/1.3).toInt
      i = 0
      while (i+ecart<getNombreValeurs())
      {
        if (!plusPetit(i,i+ecart))
        {
          echange(i,i+ecart)
          i+=1
          tri = false
        }
        
      }
    }
  } while (ecart>1 || tri == false)
}